Add background image to letter.html

--- a/letter.html
+++ b/letter.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-
+<img src="HuGGeENt6kGyixe3hT9tnY.jpg" alt="stubby alien" class="background-image">
 <div class="center">
   <div class="letter">
     <textarea placeholder="Write your letter…"></textarea>
