--- a/prompt.html
+++ b/prompt.html
@@ -7,7 +7,7 @@
 
 
 <body>
-
+<img src="HuGGeENt6kGyixe3hT9tnY.jpg" alt="stubby alien" class="background-image">
 <div class="center">
   <div class="window">
     <h1>you sure?</h1>
