Add image element to prompt2.html

--- a/prompt2.html
+++ b/prompt2.html
@@ -7,7 +7,7 @@
 
 
 <body>
-
+<img src="HuGGeENt6kGyixe3hT9tnY.jpg" alt="stubby alien" class="background-image">
 <div class="center">
   <div class="window">
     <h1>hmmm.. are you really sure?</h1>
