Update title comment for clarity and image element to html

--- a/prompt3.html
+++ b/prompt3.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Choose Again</title> <!--User chooses again-->
+  <title>Choose Again</title> <!--User chooses again for the third time-->
   <link rel="stylesheet" href="style.css">
 </head>
 
 
 <body>
-
+<img src="HuGGeENt6kGyixe3hT9tnY.jpg" alt="stubby alien" class="background-image">
 <div class="center">
   <div class="window">
     <h1>are you really really REALLLLYYYY sure?</h1>
