Clarify user choice comment in prompt4.html and image element in html
Updated comment to specify the fourth time the user chooses again.

--- a/prompt4.html
+++ b/prompt4.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Choose Again</title> <!--User chooses again-->
+  <title>Choose Again</title> <!--User chooses again for the fourth time-->
   <link rel="stylesheet" href="style.css">
 </head>
 
 
 <body>
-
+<img src="HuGGeENt6kGyixe3hT9tnY.jpg" alt="stubby alien" class="background-image">
 <div class="center">
   <div class="window">
     <h1>most positively, most absolutely, confirmed extraterrestrially sure?</h1>
