--- a/prompt7.html
+++ b/prompt7.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Choose Again</title> <!--User chooses again-->
+  <title>Choose Again</title> <!--User accepts the choice and is forced to continue-->
   <link rel="stylesheet" href="style.css">
 </head>
 
 
 <body>
-
+<img src="HuGGeENt6kGyixe3hT9tnY.jpg" alt="stubby alien" class="background-image">
 <div class="center">
   <div class="window">
     <h1>giggled. press the button below </h1>
