--- a/prompt8.html
+++ b/prompt8.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Choose Again</title> <!--User chooses again-->
+  <title>Choose Again</title> <!--User will be brought to the letter page after being forced to accept the choice-->
   <link rel="stylesheet" href="style.css">
 </head>
 
 
 <body>
-
+<img src="HuGGeENt6kGyixe3hT9tnY.jpg" alt="stubby alien" class="background-image">
 <div class="center">
   <div class="window">
     <h1>giggled. yeah i thought so. press the button below. </h1>
