Update letter content and remove textarea

--- a/letter.html
+++ b/letter.html
@@ -8,11 +8,18 @@
 <body>
 <img src="HuGGeENt6kGyixe3hT9tnY.jpg" alt="stubby alien" class="background-image">
 <div class="center">
+  
   <div class="letter">
-    <textarea placeholder="Write your letter…"></textarea>
+    <h1>I want to tell you how you’re my favorite person that i’ve ever met before. And as much as you wish you weren’t around, you telling me that you’d stick around a bit more really got me in the feels.</h1>
+    <h1>I thought more about it on the train home and i couldn’t help but bask in your warmth. Thank you for giving my birthday something great to remember for years to come.</h1>
+    <h1>I'm not very great at expressing my emotions, as you could tell, but I thank you a lot. I love you very much and i cannot thank you enough for showing me how it feels to be loved and appreciated. i look forward to many bites and tickles in the future.</h1> 
+
+    <h2>p.s., you estinki</h2>
+    <button class="option" onclick="goToCheesyGrin()">Continue</button>
   </div>
 </div>
 
+<script src="script.js"></script>
 
 </body>
 </html>
