--- a/letter.html
+++ b/letter.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your Letter</title> <!--Letter-->
   <link rel="stylesheet" href="style.css">
 </head>
