--- a/prompt2.html
+++ b/prompt2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Choose Again</title> <!--User chooses again for the second time-->
   <link rel="stylesheet" href="style.css">
 </head>
