--- a/prompt8.html
+++ b/prompt8.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Choose Again</title> <!--User will be brought to the letter page after being forced to accept the choice-->
   <link rel="stylesheet" href="style.css">
 </head>
